<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级情景模式</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1_content">Tab1Content</string>
    <string name="tab2_content">Tab2Content</string>
    <string name="tab3_content">Tab3Content</string>
    <string name="sub_host_tab_content">SubHostTabContent</string>
    <string name="tab1_tag">情景模式</string>
    <string name="tab2_tag">护眼色温</string>
    <string name="tab3_tag">定时休息</string>
    <string name="tab4_tag">更多设置</string>
    <string name="reset_setting">重置</string>
    <string name="save_change">保存</string>
    <!-- dialog message -->
    <string name="save_change_confirm">确认保存更改么？\nTip：您可以通过Reset重设预制</string>
    <string name="save_change_confirm_title">保存更改</string>
    <string name="reset_setting_confirm">确认重置配置参数么？\nTip：您之前保存的参数都将丢失</string>
    <string name="reset_setting_confirm_title">重置配置</string>
    <string name="profile_name1">温暖是家</string>
    <string name="profile_name2">走在路上</string>
    <string name="profile_name3">辛勤耕耘</string>
    <string name="profile_name4">养精蓄锐</string>
    <string name="profile_detail1_item1">声音</string>
    <string name="profile_detail1_item2">连接</string>
    <string name="profile_detail1_item3">显示</string>
    <string name="profile_detail1_item4">触发</string>
    <string name="volume_on">静音</string>
    <string name="volume_off">静音</string>
    <string name="brightness_auto_on">自动</string>
    <string name="brightness_auto_off">手动</string>
    <string name="period_on">时段</string>
    <string name="period_off">全天</string>
    <string name="change_wallpaper">切换</string>
    <string name="set_time_button_text">设定</string>
    <string name="profile_detail1">音量</string>
    <string name="profile_detail2">响铃模式</string>
    <string name="profile_detail3">飞行模式</string>
    <string name="profile_detail4">WiFi连接</string>
    <string name="profile_detail5">移动网络</string>
    <string name="profile_detail6">Bluetooth</string>
    <string name="profile_detail7">亮度</string>
    <string name="profile_detail8">壁纸</string>
    <string name="profile_detail9">定时</string>
    <string name="profile_detail10">定日</string>
    <string name="ring_mode_normal">响铃</string>
    <string name="ring_mode_silent">静默</string>
    <string name="ring_mode_vibrate">震动</string>
    <string name="repeat_mode_everyday">每天</string>
    <string name="repeat_mode_workday">工作日</string>
    <string name="repeat_mode_weekend">休息日</string>
    <string name="menuItemStartService">menuItemStartService</string>
    <string name="flux_start">开启护眼模式</string>
    <string name="timeout_start">开启定时休息</string>
    <string name="start_another_in_tab">Start_another_in_tab</string>
    <string name="title_activity_activity2">Activity2</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="title_activity_sub_host">SubHost</string>
    <string name="title_activity_activity1">Activity1</string>
    <string name="title_activity_activity3">Activity3</string>
    <string name="title_activity_activity4">Activity4</string>
    <string name="text_on_tab1">情景模式</string>
    <string name="text_on_tab2">护眼色温</string>
    <string name="text_on_tab3">定时休息</string>
    <string name="text_on_tab4">更多设置</string>
    <string name="title_activity_cover">CoverActivity</string>
    <string name="shareTitle">分享给更多人</string>
    <string name="shareMessage">从不独占</string>
    <string name="str_no">继续体验...</string>
    <string name="str_ok">那是当然</string>
    <string name="agreement_read">我已阅读注意事项</string>
    <string name="agreement_content">\t\t\t注意事项\t\t\t\n1.此功能可能会导致无法安装应用程序！\n2.此功能仍在调试中！\n3.建议暂不开启此功能！</string>

    <!-- 下拉列表 -->
    <string name="eye_protect_work">最长用眼时间(分):</string>

    <string-array name="work_time">
        <item>55</item>
        <item>45</item>
        <item>35</item>
        <item>30</item>
    </string-array>

    <string name="eye_protect_rest">间隔休息时间(分):</string>

    <string-array name="rest_time">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string name="eye_protect_start">开启定时休息</string>
    <string name="map_api_test">地图API测试</string>
    <string name="setting_about">关于...</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_testing_algorithm">TestingAlgorithm</string>
    <string name="bug_report">用户反馈，邮件报告</string>

</resources>
