<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.product.kyle.testforgradle.MessageFragment"
    android:background="@color/gray91">

    <TextView
        android:id="@+id/tv"
        android:text="@string/profile_name1"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/bg_border"/>


    <TableLayout
        android:layout_below="@id/tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:stretchColumns="4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        style="@style/profile_detail_text_view"
                        android:textSize="20dp"

                        android:text="@string/profile_detail1"/>

                    <Switch
                        android:layout_span="3"
                        android:id="@+id/switch1"
                        android:layout_marginRight="4dp"/>
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/profile_detail_text_view"
                        android:textSize="20dp"

                        android:text="@string/profile_detail2"/>

                    <Switch
                        android:layout_span="3"
                        android:id="@+id/switch2"
                        android:layout_marginRight="4dp"></Switch>
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/profile_detail_text_view"
                        android:textSize="20dp"

                        android:text="@string/profile_detail3"/>

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_span="3"
                        android:gravity="right"
                        android:layout_marginRight="4dp"></Switch>
                </TableRow>

                <TableRow>

                    <TextView
                        android:text="左边的invisible"
                        android:gravity="right"
                        android:padding="3dip"/>

                    <Button
                        android:text="go"
                        android:padding="3dip"/>

                    <Button
                        android:text="cancel"
                        android:padding="3dip"/>
                </TableRow>

                <TableRow>

                    <TextView
                        style="@style/layout_wmhw"
                        android:textSize="20dp"

                        android:text="@string/profile_detail4"/>

                    <SeekBar
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:id="@+id/switch4"
                        android:layout_marginRight="4dp">
                    </SeekBar>

                    <ToggleButton
                        android:text=""

                        />
                </TableRow>

                <View
                    android:layout_height="2dip"
                    android:background="#F0F"/>

                <TableRow
                    >

                    <Button
                        android:layout_gravity="center_horizontal"
                        style="@style/layout_wmhm"
                        android:text="@string/app_name"/>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </TableLayout>

</RelativeLayout>
