<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="button_fragment_tag"
    tools:context=".ProfileFragment">
    <!--id added for child fragments-->

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/tab01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:scaleType="fitXY"
            android:src="@drawable/smart_life_circle" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile1"
                    style="@style/ProfileButton"
                    android:text="@string/profile_name1" />
                <!--android:layout_width="130dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="16dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:background="@drawable/bg_border2"-->
                <!--android:textSize="24dp"-->

                <ToggleButton
                    android:id="@+id/profile1_switcher_toggle"
                    style="@style/ProfileToggleButton" />
            </LinearLayout>

            <!--<Button-->
            <!--android:id="@+id/profile1"-->
            <!--android:layout_width="130dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_marginTop="40dp"-->
            <!--android:background="@drawable/bg_border2"-->
            <!--android:text="@string/profile_name1"-->
            <!--android:textSize="24dp"/>-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile2"
                    style="@style/ProfileButton"
                    android:text="@string/profile_name2" />

                <ToggleButton
                    android:id="@+id/profile2_switcher_toggle"
                    style="@style/ProfileToggleButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile3"
                    style="@style/ProfileButton"
                    android:text="@string/profile_name3" />

                <ToggleButton
                    android:id="@+id/profile3_switcher_toggle"
                    style="@style/ProfileToggleButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile4"
                    style="@style/ProfileButton"
                    android:text="@string/profile_name4" />

                <ToggleButton
                    android:id="@+id/profile4_switcher_toggle"
                    style="@style/ProfileToggleButton" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</FrameLayout>
