<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray91">




    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"/>

    <!--原光标组件-->
    <!--<ImageView-->
        <!--android:id="@+id/cursor"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0"-->
        <!--android:scaleType="matrix"-->
        <!--android:src="@drawable/ic_launcher"/>-->

    <!--原标签栏（4栏）-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.01"-->
        <!--android:orientation="horizontal">-->


        <!--<TextView-->
            <!--android:id="@+id/tv_guid1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0"-->
            <!--android:gravity="center"-->
            <!--android:text="特性1"-->
            <!--android:textSize="18sp"/>-->
        <!--<TextView-->
            <!--android:id="@+id/tv_guid2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0"-->
            <!--android:gravity="center"-->
            <!--android:text="特性2"-->
            <!--android:textSize="18sp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/tv_guid3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0"-->
            <!--android:gravity="center"-->
            <!--android:text="特性3 "-->
            <!--android:textSize="18sp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/tv_guid4"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0"-->
            <!--android:gravity="center"-->
            <!--android:text="特性4"-->
            <!--android:textSize="18sp"/>-->
    <!--</LinearLayout>-->



    <!--android:layout_weight="1"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/guide_tab_bg"
        >
        android:background="@drawable/tab_bg"
        <RelativeLayout
            android:id="@+id/message_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/message_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/message_unselected"/>
                <!--android:id="@+id/message_text"-->
                <TextView
                android:id="@+id/message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_on_tab1"
                    android:textColor="@color/text_color_on_tab"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/contacts_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/contacts_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:scaleType="fitCenter"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/contacts_unselected"/>
                <!--android:id="@+id/contacts_text"-->
                <TextView
                    android:id="@+id/contacts_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_on_tab2"
                    android:textColor="@color/text_color_on_tab"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/news_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/news_unselected"/>
                <!--android:id="@+id/news_text"-->
                <TextView
                    android:id="@+id/news_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_on_tab3"
                    android:textColor="@color/text_color_on_tab"/>

            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/setting_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/setting_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/setting_unselected"/>
                <!--android:id="@+id/setting_text"-->
                <TextView
                    android:id="@+id/setting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_on_tab4"
                    android:textColor="@color/text_color_on_tab"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>  